フッターを修正

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "useSideMenu": true,
     "lineBreaks": "gfm",
-    "additionalFooterText": "&copy; 2024 tmjpn / ",
+    "additionalFooterText": "&copy; 2024-2025 tmjpn / ",
     "anchorCharacter": "&para;",
     "title": "tmjpn.github.io"
 }
